Switched to Typescript for future improvements

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
                 return true;
             };
         </script>
-		<script src="house.js"></script>
-        <script src="balls.js"></script>
-		<script src="world.js"></script>
-		<script src="main.js"></script>
+		<script src="built.js"></script>
 	</head>
     <body>
         Day: <span id="date">0</span><br>
