--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+        <!-- CSS only -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+        <!-- JS, Popper.js, and jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script>
             window.onerror = function(message, url, lineNumber) {  
                 return true;
@@ -10,8 +18,39 @@
 		<script src="built.js"></script>
 	</head>
     <body>
-        Day: <span id="date">0</span><br>
+        <!-- Day: <span id="date">0</span><br>
         Healthy: <span id="h">0</span> | Ill: <span id="i">0</span> | Recovered: <span id="r">0</span> | Dead: <span id="d">0</span><br>
-        Total: <span id="t">0</span><br>
+        Total: <span id="t">0</span><br> -->
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target="#settingModal">
+          Settings
+        </button>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="settingModal" tabindex="-1" role="dialog" aria-labelledby="settingsModal" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Setting</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                          <label for="numPeople">Number of People</label>
+                          <input type="range" class="custom-range" name="numPeople" id="numPeople" aria-describedby="numPeopleHelp" value="250" min="0" max="500" step="1" oninput="document.getElementById('numPeopleHelp').innerHTML = this.value">
+                          <small id="numPeopleHelp" class="form-text text-muted">250</small>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="createWorld()" data-dismiss="modal">New Simulation</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="phaser"></div>
+        <canvas id="timeChart"></canvas>
     </body>
 </html>
